<resources>
    <string name="boton_login">Log in Scores</string>
    <string name="boton_logoff">Log off</string>
    <string name="boton_logro">Achievements</string>
    <string name="boton_leaderboards">Top Best</string>
    <string name="you_are_connected">Connected Online Scores</string>
    <string name="you_are_not_connected">Offline</string>
    <string name="not_available">Not available</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Fresh Memory</string>
    <string name="menu_settings">Settings</string>
    <string name="selecciona_una_opcion">Choose one option:</string>
    <string name="columnas">Col number: </string>
    <string name="filas">Row number: </string>
    <string name="dificultad">Select Level:</string>
    <string name="sonido">Sound</string>
    <string name="activarsonido">Enable sound</string>
    <string name="desactivarsonido">Disable sound</string>
    <string name="mostrarparejas">Show pairs</string>
     <string name="modosecuencias">Sequences</string>
     <string name="modoparejas">Match</string>
    <string name="borrarmarcadores">Delete Scores</string>
    <string name="seborraranlosrecords">Best scores and levels will be deleted</string>
    <string name="seborraranlosrecordsparejas">Scores in match mode will be deleted</string>
    <string name="seborraranlosrecordssecuencias">Scores in mode sequence will be deleted</string>
    <string name="deseasalir">Do you want to quit?</string>
    <string name="deseasalir2">Do you want to quit game?</string>
    <string name="perderapuntuaciones">You will lose scores!</string>
    <string name="encontradas">Pairs : </string>
    <string name="clicks">Attempts : </string>
    <string name="tiempo">Time : </string>
    <string name="puntuacion">Score</string>
    <string name="fecha">Date</string>
     <string name="modos">Game Modes</string>
     <string name="nivelfinalcompletado">Final completed!!</string>
     <string name="felicidades">CONGRATULATIONS!!</string>
     <string name="modocompletado">Mode Completed!!</string>
    <string name="jugar">Play</string>
    <string name="nivel">Level</string>
    <string name="clasicofacil">4x3</string>
    <string name="clasicomedio">6x4</string>
    <string name="clasicodificil">8x5</string>
    <string name="clasicomaximo">10x7</string>
    <string name="relacionesfacil">4x3</string>
    <string name="relacionesmedio">5x4</string>
    <string name="relacionesdificil">7x4</string>
    <string name="relacionesmaximo">8x5</string>
    <string name="completado">completed!! </string>
    <string name="menu">Menu </string>
    <string name="tiempo_restante">Bonus time</string>
    <string name="tiempo_empleado">Total time</string>
    <string name="puntos_totales">Total points</string>
     <string name="puntos_acumulados">Total score</string>
    <string name="inicio">Start</string>
    <string name="salir">Quit</string>
    <string name="volver">Back</string>
     <string name="siguiente">Next</string>
    <string name="repetir">Repeat</string>
    <string name="nosuperado">failed!</string>
    <string name="jugarotravez">play again?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="seg">sec</string>
    <string name="logo_empresa">ChukiGames</string>
    <string name="logo_empresa2">ClaritaGames</string>
    <string name="logo_empresa4">MarinaGames</string>
    <string name="pareja_encontrada">Found</string>
    <string name="nivel_completado">Completed!</string>
    <string name="puntos_modoclasico">Points</string>
    <string name="aciertos_modoclasico">Hits</string>
    <string name="tiempo_modoclasico">Time</string>
    <string name="combos_modoclasico">Combos</string>
    <string name="marcadores">Scores</string>
    <string name="text4x3">Board \n(4x3)</string>
    <string name="text6x4">Board \n(6x4)</string>
    <string name="text8x5">Board \n(8x5)</string>
    <string name="text10x7">Board \n(10x7)</string>
    <string name="tematica">Select Subject:</string>
    <string name="tema1">Flags</string>
    <string name="preview">Preview</string>
    <string name="tema2">Deportes</string>
    <string name="tema3">Emoticonos</string>
    <string name="tema4">Varios</string>
    <string name="tema5">Internet</string>
    <string name="tema6">Objetos</string>
    <string name="tema11">Sports</string>
    <string name="tema22">Professions</string>
    <string name="tema33">Misc</string>
    <string name="tema44">Disney</string>
    <string name="tema55">Sums</string>
    <string name="tema66">Flags</string>
    <string name="tema77">Roman Numerals</string>
    <string name="botonmodoclasico">Classic</string>
    <string name="botonmodotimeatack">Time Challenge</string>
    <string name="botonmodorelaciones">Connections</string>
    <string name="botonmodotimeatack2">Time Challenge +</string>
    <string name="botonmodoSecuencias">Sequences</string>
    <string name="configuracion">Settings</string>
    <string name="aboutus">About</string>
    <string name="resetmarcadores">Reset all scores</string>
    <string name="resetmarcadoresparejas">Reset scores Pairs</string>
    <string name="resetmarcadoressecuencias">Reset scores Sequences</string>
    <string name="preferencias">Preferences</string>
    <string name="marcadoresaresetear">Scores to Reset</string>
    <string name="textviewinfor1">Find all pairs on the board in the fewest number of attempts and the shortest time possible..</string>
    <string name="textviewinfor2">Complete the panel before the time runs out and the get to the next level.</string>
    <string name="textviewinfor3">Match each picture with its corresponding description in the fewest number of attempts and time.</string>
	<string name="textviewinfor4">Complete the panel relating the images with its description before time runs out.</string>
	<string name="textviewinfor5">Match each color with its corresponding color. Each level is a different challenge. </string>
	<string name="textviewinfornumeros">Additions and subtrations.\nClick the next number in the sequence as indicated operation.</string>
	<string name="textviewinforseries">Find the sequence and turn around the entire panel in the lowest number of attempts.</string>
	<string name="textviewinforsimon">Memorize the sequence of colors as the classic game and overcome your high score.</string>
	<string  name="aboutuss">\nSupport :\n\n\n Concept and levels design  \nJonatan Manzano  \n\nTechnical support \nClara González \n\n\nThanks to:  \n\nwww.icondrawer.com \n http://sportsbettingspot.com \n http://www.icons-land.com \n http://www.aha-soft.com \n  http://www.icons-land.com \n http://www.quizanswers.com \n http://www.softicons.com \n http://itscoding.com/new-social-media-icon-set \n http://www.everaldo.com \n http://designmodo.com/ \n </string>
	<string  name="depor1">Hurdling</string>
	<string  name="depor2">Badminton</string>
	<string  name="depor3">Cycling BMX</string>
	<string  name="depor4">Equestrian\njumping</string>
	<string  name="depor5">Gymnastics\nrhythmic</string>
	<string  name="depor6">Judo</string>
	<string  name="depor7">Sailing</string>
	<string  name="depor8">Triathlon</string>
	<string  name="depor9">Wrestling\nGreco roman</string>
	<string  name="depor10">Archery</string>
	<string  name="depor11">Mountain\nbike</string>
	<string  name="depor12">Fencing</string>
	<string  name="depor13">Gymnastics\ntrampoline</string>
	<string  name="depor14">Kayak</string>
	<string  name="depor15">Shooting</string>
	<string  name="depor16">VoleyBall</string>
	<string  name="depor17">Basketball</string>
	<string  name="depor18">Cycling\n road</string>
	<string  name="depor19">Equestrian\ndressage</string>
	<string  name="depor20">Football</string>
	<string  name="depor21">Pentathlon</string>
	<string  name="depor22">Swimming\nsynchronized</string>
	<string  name="depor23">Taekwondo</string>
	<string  name="depor24">Weight\nlifting</string>
	<string  name="depor25">Boxing</string>
	<string  name="depor26">Diving</string>
	<string  name="depor27">Equestrian\neventing</string>
	<string  name="depor28">Vauling horse</string>
	<string  name="depor29">Rowing</string>
	<string  name="depor30">Table\ntennis</string>
	<string  name="depor31">Tennis</string>
	<string  name="depor32">Wrestling</string>
	<string  name="depor33">Baseball</string>
	<string  name="depor34">Running</string>
	<string  name="depor35">Rugby</string>
	<string  name="suma1">1</string>
	<string  name="suma2">2</string>
	<string  name="suma3">3</string>
	<string  name="suma4">4</string>
	<string  name="suma5">5</string>
	<string  name="suma6">6</string>
	<string  name="suma7">7</string>
	<string  name="suma8">8</string>
	<string  name="suma9">9</string>
	<string  name="suma10">10</string>
	<string  name="suma11">11</string>
	<string  name="suma12">12</string>
	<string  name="suma13">13</string>
	<string  name="suma14">14</string>
	<string  name="suma15">15</string>
	<string  name="suma16">16</string>
	<string  name="suma17">17</string>
	<string  name="suma18">18</string>
	<string  name="suma19">19</string>
	<string  name="suma20">20</string>
	<string  name="suma21">21</string>
	<string  name="suma22">22</string>
	<string  name="suma23">23</string>
	<string  name="suma24">24</string>
	<string  name="suma25">25</string>
	<string  name="suma26">26</string>
	<string  name="suma27">27</string>
	<string  name="suma28">28</string>
	<string  name="suma29">29</string>
	<string  name="suma30">30</string>
	<string  name="suma31">31</string>
	<string  name="suma32">32</string>
	<string  name="suma33">33</string>
	<string  name="suma34">34</string>
	<string  name="suma35">35</string>
	<string  name="numero1">I</string>
	<string  name="numero2">II</string>
	<string  name="numero3">III</string>
	<string  name="numero4">IV</string>
	<string  name="numero5">V</string>
	<string  name="numero6">VI</string>
	<string  name="numero7">VII</string>
	<string  name="numero8">VIII</string>
	<string  name="numero9">IX</string>
	<string  name="numero10">X</string>
	<string  name="numero11">XX</string>
	<string  name="numero12">XXX</string>
	<string  name="numero13">XL</string>
	<string  name="numero14">L</string>
	<string  name="numero15">LX</string>
	<string  name="numero16">LXX</string>
	<string  name="numero17">LXXX</string>
	<string  name="numero18">XC</string>
	<string  name="numero19">C</string>
	<string  name="numero20">CC</string>
	<string  name="numero21">CCC</string>
	<string  name="numero22">CD</string>
	<string  name="numero23">D</string>
	<string  name="numero24">DC</string>
	<string  name="numero25">DCC</string>
	<string  name="numero26">DCCC</string>
	<string  name="numero27">CM</string>
	<string  name="numero28">M</string>
	<string  name="numero29">MM</string>
	<string  name="numero30">MMM</string>
	<string  name="numero31">-IV-</string>
	<string  name="numero32">-V-</string>
	<string  name="numero33">-VI-</string>
	<string  name="numero34">-VII-</string>
	<string  name="numero35">-VIII-</string>
	<string  name="flag1">Afghanistan</string>
	<string  name="flag2">Argentina</string>
	<string  name="flag3">Algeria</string>
	<string  name="flag4">Chile</string>
	<string  name="flag5">Spain</string>
	<string  name="flag6">Belgium</string>
	<string  name="flag7">Brazil</string>
	<string  name="flag8">Bulgaria</string>
	<string  name="flag9">Canada</string>
	<string  name="flag10">Austria</string>
	<string  name="flag11">China</string>
	<string  name="flag12">Colombia</string>
	<string  name="flag13">Croatia</string>
	<string  name="flag14">Cuba</string>
	<string  name="flag15">Czech  \nRepublic</string>
	<string  name="flag16">England</string>
	<string  name="flag17">Estonia</string>
	<string  name="flag18">Greece</string>
	<string  name="flag19">Israel</string>
	<string  name="flag20">Italy</string>
	<string  name="flag21">Japan</string>
	<string  name="flag22">Macedonia</string>
	<string  name="flag23">Malaysia</string>
</resources>